<resources>
    <string name="approve">Approval</string>
    <string name="oppose">Oppose</string>
    <string name="abstain">Abstain</string>
    <string name="vp_first_fragme">First ViewPager Fragment Page</string>
    <string name="vp_second_fragme">Second ViewPager Fragment Page</string>
    <string name="vp_third_fragme">Third ViewPager Fragment Page</string>
    <string name="rdo_home_label">Home</string>
    <string name="rdo_func_label">Function</string>
    <string name="rdo_setting_label">Setting</string>
    <string name="rate_item_input">Input RMB</string>
    <string name="app_name">MyApp1</string>
    <string name="btn_ok">OK</string>
    <string name="btn_point1">+1 POINT</string>
    <string name="btn_point2">+2 POINTS</string>
    <string name="btn_point3">+3 POINTS</string>
    <string name="btn_reset">RESET</string>
    <string name="btn_transfer">转换为华氏度</string>
    <string name="btn_dollar">DOLLAR</string>
    <string name="btn_euro">EURO</string>
    <string name="btn_won">WON</string>
    <string name="btn_config">CONFIG</string>
    <string name="editText1">name</string>
    <string name="etext_team">TeamA</string>
    <string name="etext_team2">TeamB</string>
    <string name="etext_num">0</string>
    <string name="etext_rmb">inputRMB</string>
    <string name="imageBotton">TODO</string>
    <string name="textView1">转换结果</string>
    <string name="login_button1">OK</string>
    <string name="birth_textView">Birthday Card</string>
    <string name="birth_multilineText">Best Wish To You</string>
    <string name="etext_temperature">请输入温度</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
