<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigActivity">

    <EditText
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/btn_dollar" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/btn_euro" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/btn_won" />

    <Button
        android:onClick="config"
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/btn_ok"
        android:textSize="25sp"
        android:background="#FFDEAD"/>
</LinearLayout>